EdwinWesterhoud/SoftwConsQL/QL_Fsharp/QL_Parser.fsyacc.output
Output file describing compiled parser placed in C:\Users\Edwin\Documents\UvA\Software Construction\Git\EdwinWesterhoud\SoftwConsQL\QL_Fsharp\QL_Parser.fs and C:\Users\Edwin\Documents\UvA\Software Construction\Git\EdwinWesterhoud\SoftwConsQL\QL_Fsharp\QL_Parser.fsi
------------------------
states = 
state 0:
  items:
    _startstart ->  . start

  actions:
    action 'END' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'MULT' (noprec):   error
    action 'DIV' (noprec):   error
    action 'QLBOOL' (noprec):   error
    action 'QLSTRING' (noprec):   error
    action 'QLINT' (noprec):   error
    action 'QLDATE' (noprec):   error
    action 'QLDECIMAL' (noprec):   error
    action 'QLMONEY' (noprec):   error
    action 'MONEY' (noprec):   error
    action 'DECIMAL' (noprec):   error
    action 'DATE' (noprec):   error
    action 'INT' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'LABEL' (noprec):   error
    action 'IDENTIFIER' (noprec):   error
    action 'COLON' (noprec):   error
    action 'B_OPEN' (noprec):   error
    action 'B_CLOSE' (noprec):   error
    action 'CB_OPEN' (noprec):   error
    action 'CB_CLOSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'FORM' (noprec):   shift 2
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto start: 1

state 1:
  items:
    _startstart -> start . 

  actions:
    action 'END' (noprec):   accept
    action 'EQ' (noprec):   accept
    action 'NE' (noprec):   accept
    action 'LT' (noprec):   accept
    action 'LE' (noprec):   accept
    action 'GT' (noprec):   accept
    action 'GE' (noprec):   accept
    action 'AND' (noprec):   accept
    action 'OR' (noprec):   accept
    action 'NOT' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'MULT' (noprec):   accept
    action 'DIV' (noprec):   accept
    action 'QLBOOL' (noprec):   accept
    action 'QLSTRING' (noprec):   accept
    action 'QLINT' (noprec):   accept
    action 'QLDATE' (noprec):   accept
    action 'QLDECIMAL' (noprec):   accept
    action 'QLMONEY' (noprec):   accept
    action 'MONEY' (noprec):   accept
    action 'DECIMAL' (noprec):   accept
    action 'DATE' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'STRING' (noprec):   accept
    action 'BOOL' (noprec):   accept
    action 'LABEL' (noprec):   accept
    action 'IDENTIFIER' (noprec):   accept
    action 'COLON' (noprec):   accept
    action 'B_OPEN' (noprec):   accept
    action 'B_CLOSE' (noprec):   accept
    action 'CB_OPEN' (noprec):   accept
    action 'CB_CLOSE' (noprec):   accept
    action 'IF' (noprec):   accept
    action 'FORM' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    start -> 'FORM' . 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'

  actions:
    action 'END' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'MULT' (noprec):   error
    action 'DIV' (noprec):   error
    action 'QLBOOL' (noprec):   error
    action 'QLSTRING' (noprec):   error
    action 'QLINT' (noprec):   error
    action 'QLDATE' (noprec):   error
    action 'QLDECIMAL' (noprec):   error
    action 'QLMONEY' (noprec):   error
    action 'MONEY' (noprec):   error
    action 'DECIMAL' (noprec):   error
    action 'DATE' (noprec):   error
    action 'INT' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'LABEL' (noprec):   error
    action 'IDENTIFIER' (noprec):   shift 3
    action 'COLON' (noprec):   error
    action 'B_OPEN' (noprec):   error
    action 'B_CLOSE' (noprec):   error
    action 'CB_OPEN' (noprec):   error
    action 'CB_CLOSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'FORM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 3:
  items:
    start -> 'FORM' 'IDENTIFIER' . 'CB_OPEN' stmtList 'CB_CLOSE' 'END'

  actions:
    action 'END' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'MULT' (noprec):   error
    action 'DIV' (noprec):   error
    action 'QLBOOL' (noprec):   error
    action 'QLSTRING' (noprec):   error
    action 'QLINT' (noprec):   error
    action 'QLDATE' (noprec):   error
    action 'QLDECIMAL' (noprec):   error
    action 'QLMONEY' (noprec):   error
    action 'MONEY' (noprec):   error
    action 'DECIMAL' (noprec):   error
    action 'DATE' (noprec):   error
    action 'INT' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'LABEL' (noprec):   error
    action 'IDENTIFIER' (noprec):   error
    action 'COLON' (noprec):   error
    action 'B_OPEN' (noprec):   error
    action 'B_CLOSE' (noprec):   error
    action 'CB_OPEN' (noprec):   shift 4
    action 'CB_CLOSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'FORM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 4:
  items:
    start -> 'FORM' 'IDENTIFIER' 'CB_OPEN' . stmtList 'CB_CLOSE' 'END'

  actions:
    action 'END' (noprec):   reduce stmtList --> 
    action 'EQ' (noprec):   reduce stmtList --> 
    action 'NE' (noprec):   reduce stmtList --> 
    action 'LT' (noprec):   reduce stmtList --> 
    action 'LE' (noprec):   reduce stmtList --> 
    action 'GT' (noprec):   reduce stmtList --> 
    action 'GE' (noprec):   reduce stmtList --> 
    action 'AND' (noprec):   reduce stmtList --> 
    action 'OR' (noprec):   reduce stmtList --> 
    action 'NOT' (noprec):   reduce stmtList --> 
    action 'PLUS' (noprec):   reduce stmtList --> 
    action 'MINUS' (noprec):   reduce stmtList --> 
    action 'MULT' (noprec):   reduce stmtList --> 
    action 'DIV' (noprec):   reduce stmtList --> 
    action 'QLBOOL' (noprec):   reduce stmtList --> 
    action 'QLSTRING' (noprec):   reduce stmtList --> 
    action 'QLINT' (noprec):   reduce stmtList --> 
    action 'QLDATE' (noprec):   reduce stmtList --> 
    action 'QLDECIMAL' (noprec):   reduce stmtList --> 
    action 'QLMONEY' (noprec):   reduce stmtList --> 
    action 'MONEY' (noprec):   reduce stmtList --> 
    action 'DECIMAL' (noprec):   reduce stmtList --> 
    action 'DATE' (noprec):   reduce stmtList --> 
    action 'INT' (noprec):   reduce stmtList --> 
    action 'STRING' (noprec):   reduce stmtList --> 
    action 'BOOL' (noprec):   reduce stmtList --> 
    action 'LABEL' (noprec):   reduce stmtList --> 
    action 'IDENTIFIER' (noprec):   shift 13
    action 'COLON' (noprec):   reduce stmtList --> 
    action 'B_OPEN' (noprec):   reduce stmtList --> 
    action 'B_CLOSE' (noprec):   reduce stmtList --> 
    action 'CB_OPEN' (noprec):   reduce stmtList --> 
    action 'CB_CLOSE' (noprec):   reduce stmtList --> 
    action 'IF' (noprec):   shift 21
    action 'FORM' (noprec):   reduce stmtList --> 
    action 'error' (noprec):   reduce stmtList --> 
    action '#' (noprec):   reduce stmtList --> 
    action '$$' (noprec):   reduce stmtList --> 

  immediate action: <none>
 gotos:
    goto stmtList: 5
    goto stmt: 8
    goto assignment: 10
    goto question: 11
    goto conditional: 12

state 5:
  items:
    start -> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList . 'CB_CLOSE' 'END'

  actions:
    action 'END' (noprec):   error
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'MULT' (noprec):   error
    action 'DIV' (noprec):   error
    action 'QLBOOL' (noprec):   error
    action 'QLSTRING' (noprec):   error
    action 'QLINT' (noprec):   error
    action 'QLDATE' (noprec):   error
    action 'QLDECIMAL' (noprec):   error
    action 'QLMONEY' (noprec):   error
    action 'MONEY' (noprec):   error
    action 'DECIMAL' (noprec):   error
    action 'DATE' (noprec):   error
    action 'INT' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'LABEL' (noprec):   error
    action 'IDENTIFIER' (noprec):   error
    action 'COLON' (noprec):   error
    action 'B_OPEN' (noprec):   error
    action 'B_CLOSE' (noprec):   error
    action 'CB_OPEN' (noprec):   error
    action 'CB_CLOSE' (noprec):   shift 6
    action 'IF' (noprec):   error
    action 'FORM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 6:
  items:
    start -> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' . 'END'

  actions:
    action 'END' (noprec):   shift 7
    action 'EQ' (noprec):   error
    action 'NE' (noprec):   error
    action 'LT' (noprec):   error
    action 'LE' (noprec):   error
    action 'GT' (noprec):   error
    action 'GE' (noprec):   error
    action 'AND' (noprec):   error
    action 'OR' (noprec):   error
    action 'NOT' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'MULT' (noprec):   error
    action 'DIV' (noprec):   error
    action 'QLBOOL' (noprec):   error
    action 'QLSTRING' (noprec):   error
    action 'QLINT' (noprec):   error
    action 'QLDATE' (noprec):   error
    action 'QLDECIMAL' (noprec):   error
    action 'QLMONEY' (noprec):   error
    action 'MONEY' (noprec):   error
    action 'DECIMAL' (noprec):   error
    action 'DATE' (noprec):   error
    action 'INT' (noprec):   error
    action 'STRING' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'LABEL' (noprec):   error
    action 'IDENTIFIER' (noprec):   error
    action 'COLON' (noprec):   error
    action 'B_OPEN' (noprec):   error
    action 'B_CLOSE' (noprec):   error
    action 'CB_OPEN' (noprec):   error
    action 'CB_CLOSE' (noprec):   error
    action 'IF' (noprec):   error
    action 'FORM' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 7:
  items:
    start -> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END' . 

  actions:
    action 'END' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'EQ' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'NE' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'LT' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'LE' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'GT' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'GE' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'AND' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'OR' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'NOT' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'PLUS' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'MINUS' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'MULT' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'DIV' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'QLBOOL' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'QLSTRING' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'QLINT' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'QLDATE' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'QLDECIMAL' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'QLMONEY' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'MONEY' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'DECIMAL' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'DATE' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'INT' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'STRING' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'BOOL' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'LABEL' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'IDENTIFIER' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'COLON' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'B_OPEN' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'B_CLOSE' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'CB_OPEN' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'CB_CLOSE' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'IF' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'FORM' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action 'error' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action '#' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
    action '$$' (noprec):   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'

  immediate action:   reduce start --> 'FORM' 'IDENTIFIER' 'CB_OPEN' stmtList 'CB_CLOSE' 'END'
 gotos:

state 8:
  items:
    stmtList -> stmt . 
    stmtList -> stmt . stmtList

  actions:
    action 'END' (noprec):   reduce stmtList --> 
    action 'EQ' (noprec):   reduce stmtList --> 
    action 'NE' (noprec):   reduce stmtList --> 
    action 'LT' (noprec):   reduce stmtList --> 
    action 'LE' (noprec):   reduce stmtList --> 
    action 'GT' (noprec):   reduce stmtList --> 
    action 'GE' (noprec):   reduce stmtList --> 
    action 'AND' (noprec):   reduce stmtList --> 
    action 'OR' (noprec):   reduce stmtList --> 
    action 'NOT' (noprec):   reduce stmtList --> 
    action 'PLUS' (noprec):   reduce stmtList --> 
    action 'MINUS' (noprec):   reduce stmtList --> 
    action 'MULT' (noprec):   reduce stmtList --> 
    action 'DIV' (noprec):   reduce stmtList --> 
    action 'QLBOOL' (noprec):   reduce stmtList --> 
    action 'QLSTRING' (noprec):   reduce stmtList --> 
    action 'QLINT' (noprec):   reduce stmtList --> 
    action 'QLDATE' (noprec):   reduce stmtList --> 
    action 'QLDECIMAL' (noprec):   reduce stmtList --> 
    action 'QLMONEY' (noprec):   reduce stmtList --> 
    action 'MONEY' (noprec):   reduce stmtList --> 
    action 'DECIMAL' (noprec):   reduce stmtList --> 
    action 'DATE' (noprec):   reduce stmtList --> 
    action 'INT' (noprec):   reduce stmtList --> 
    action 'STRING' (noprec):   reduce stmtList --> 
    action 'BOOL' (noprec):   reduce stmtList --> 
    action 'LABEL' (noprec):   reduce stmtList --> 
    action 'IDENTIFIER' (noprec):   shift 13
    action 'COLON' (noprec):   reduce stmtList --> 
    action 'B_OPEN' (noprec):   reduce stmtList --> 
    action 'B_CLOSE' (noprec):   reduce stmtList --> 
    action 'CB_OPEN' (noprec):   reduce stmtList --> 
    action 'CB_CLOSE' (noprec):   reduce stmtList --> 
    action 'IF' (noprec):   shift 21
    action 'FORM' (noprec):   reduce stmtList --> 
    action 'error' (noprec):   reduce stmtList --> 
    action '#' (noprec):   reduce stmtList --> 
    action '$$' (noprec):   reduce stmtList --> 

  immediate action: <none>
 gotos:
    goto stmtList: 9
    goto stmt: 8
    goto assignment: 10
    goto question: 11
    goto conditional: 12

state 9:
  items:
    stmtList -> stmt stmtList . 

  actions:
    action 'END' (noprec):   reduce stmtList --> stmt stmtList
    action 'EQ' (noprec):   reduce stmtList --> stmt stmtList
    action 'NE' (noprec):   reduce stmtList --> stmt stmtList
    action 'LT' (noprec):   reduce stmtList --> stmt stmtList
    action 'LE' (noprec):   reduce stmtList --> stmt stmtList
    action 'GT' (noprec):   reduce stmtList --> stmt stmtList
    action 'GE' (noprec):   reduce stmtList --> stmt stmtList
    action 'AND' (noprec):   reduce stmtList --> stmt stmtList
    action 'OR' (noprec):   reduce stmtList --> stmt stmtList
    action 'NOT' (noprec):   reduce stmtList --> stmt stmtList
    action 'PLUS' (noprec):   reduce stmtList --> stmt stmtList
    action 'MINUS' (noprec):   reduce stmtList --> stmt stmtList
    action 'MULT' (noprec):   reduce stmtList --> stmt stmtList
    action 'DIV' (noprec):   reduce stmtList --> stmt stmtList
    action 'QLBOOL' (noprec):   reduce stmtList --> stmt stmtList
    action 'QLSTRING' (noprec):   reduce stmtList --> stmt stmtList
    action 'QLINT' (noprec):   reduce stmtList --> stmt stmtList
    action 'QLDATE' (noprec):   reduce stmtList --> stmt stmtList
    action 'QLDECIMAL' (noprec):   reduce stmtList --> stmt stmtList
    action 'QLMONEY' (noprec):   reduce stmtList --> stmt stmtList
    action 'MONEY' (noprec):   reduce stmtList --> stmt stmtList
    action 'DECIMAL' (noprec):   reduce stmtList --> stmt stmtList
    action 'DATE' (noprec):   reduce stmtList --> stmt stmtList
    action 'INT' (noprec):   reduce stmtList --> stmt stmtList
    action 'STRING' (noprec):   reduce stmtList --> stmt stmtList
    action 'BOOL' (noprec):   reduce stmtList --> stmt stmtList
    action 'LABEL' (noprec):   reduce stmtList --> stmt stmtList
    action 'IDENTIFIER' (noprec):   reduce stmtList --> stmt stmtList
    action 'COLON' (noprec):   reduce stmtList --> stmt stmtList
    action 'B_OPEN' (noprec):   reduce stmtList --> stmt stmtList
    action 'B_CLOSE' (noprec):   reduce stmtList --> stmt stmtList
    action 'CB_OPEN' (noprec):   reduce stmtList --> stmt stmtList
    action 'CB_CLOSE' (noprec):   reduce stmtList --> stmt stmtList
    action 'IF' (noprec):   reduce stmtList --> stmt stmtList
    action 'FORM' (noprec):   reduce stmtList --> stmt stmtList
    action 'error' (noprec):   reduce stmtList --> stmt stmtList
    action '#' (noprec):   reduce stmtList --> stmt stmtList
    action '$$' (noprec):   reduce stmtList --> stmt stmtList

  immediate action:   reduce stmtList --> stmt stmtList
 gotos:

state 10:
  items:
    stmt -> assignment . 

  actions:
    action 'END' (noprec):   reduce stmt --> assignment
    action 'EQ' (noprec):   reduce stmt --> assignment
    action 'NE' (noprec):   reduce stmt --> assignment
    action 'LT' (noprec):   reduce stmt --> assignment
    action 'LE' (noprec):   reduce stmt --> assignment
    action 'GT' (noprec):   reduce stmt --> assignment
    action 'GE' (noprec):   reduce stmt --> assignment
    action 'AND' (noprec):   reduce stmt --> assignment
    action 'OR' (noprec):   reduce stmt --> assignment
    action 'NOT' (noprec):   reduce stmt --> assignment
    action 'PLUS' (noprec):   reduce stmt --> assignment
    action 'MINUS' (noprec):   reduce stmt --> assignment
    action 'MULT' (noprec):   reduce stmt --> assignment
    action 'DIV' (noprec):   reduce stmt --> assignment
    action 'QLBOOL' (noprec):   reduce stmt --> assignment
    action 'QLSTRING' (noprec):   reduce stmt --> assignment
    action 'QLINT' (noprec):   reduce stmt --> assignment
    action 'QLDATE' (noprec):   reduce stmt --> assignment
    action 'QLDECIMAL' (noprec):   reduce stmt --> assignment
    action 'QLMONEY' (noprec):   reduce stmt --> assignment
    action 'MONEY' (noprec):   reduce stmt --> assignment
    action 'DECIMAL' (noprec):   reduce stmt --> assignment
    action 'DATE' (noprec):   reduce stmt --> assignment
    action 'INT' (noprec):   reduce stmt --> assignment
    action 'STRING' (noprec):   reduce stmt --> assignment
    action 'BOOL' (noprec):   reduce stmt --> assignment
    action 'LABEL' (noprec):   reduce stmt --> assignment
    action 'IDENTIFIER' (noprec):   reduce stmt --> assignment
    action 'COLON' (noprec):   reduce stmt --> assignment
    action 'B_OPEN' (noprec):   reduce stmt --> assignment
    action 'B_CLOSE' (noprec):   reduce stmt --> assignment
    action 'CB_OPEN' (noprec):   reduce stmt --> assignment
    action 'CB_CLOSE' (noprec):   reduce stmt --> assignment
    action 'IF' (noprec):   reduce stmt --> assignment
    action 'FORM' (noprec):   reduce stmt --> assignment
    action 'error' (noprec):   reduce stmt --> assignment
    action '#' (noprec):   reduce stmt --> assignment
    action '$$' (noprec):   reduce stmt --> assignment

  immediate action:   reduce stmt --> assignment
 gotos:

state 11:
  items:
    stmt -> question . 

  actions:
    action 'END' (noprec):   reduce stmt --> question
    action 'EQ' (noprec):   reduce stmt --> question
    action 'NE' (noprec):   reduce stmt --> question
    action 'LT' (noprec):   reduce stmt --> question
    action 'LE' (noprec):   reduce stmt --> question
    action 'GT' (noprec):   reduce stmt --> question
    action 'GE' (noprec):   reduce stmt --> question
    action 'AND' (noprec):   reduce stmt --> question
    action 'OR' (noprec):   reduce stmt --> question
    action 'NOT' (noprec):   reduce stmt --> question
    action 'PLUS' (noprec):   reduce stmt --> question
    action 'MINUS' (noprec):   reduce stmt --> question
    action 'MULT' (noprec):   reduce stmt --> question
    action 'DIV' (noprec):   reduce stmt --> question
    action 'QLBOOL' (noprec):   reduce stmt --> question
    action 'QLSTRING' (noprec):   reduce stmt --> question
    action 'QLINT' (noprec):   reduce stmt --> question
    action 'QLDATE' (noprec):   reduce stmt --> question
    action 'QLDECIMAL' (noprec):   reduce stmt --> question
    action 'QLMONEY' (noprec):   reduce stmt --> question
    action 'MONEY' (noprec):   reduce stmt --> question
    action 'DECIMAL' (noprec):   reduce stmt --> question
    action 'DATE' (noprec):   reduce stmt --> question
    action 'INT' (noprec):   reduce stmt --> question
    action 'STRING' (noprec):   reduce stmt --> question
    action 'BOOL' (noprec):   reduce stmt --> question
    action 'LABEL' (noprec):   reduce stmt --> question
    action 'IDENTIFIER' (noprec):   reduce stmt --> question
    action 'COLON' (noprec):   reduce stmt --> question
    action 'B_OPEN' (noprec):   reduce stmt --> question
    action 'B_CLOSE' (noprec):   reduce stmt --> question
    action 'CB_OPEN' (noprec):   reduce stmt --> question
    action 'CB_CLOSE' (noprec):   reduce stmt --> question
    action 'IF' (noprec):   reduce stmt --> question
    action 'FORM' (noprec):   reduce stmt --> question
    action 'error' (noprec):   reduce stmt --> question
    action '#' (noprec):   reduce stmt --> question
    action '$$' (noprec):   reduce stmt --> question

  immediate action:   reduce stmt --> question
 gotos:

state 12:
  items:
    stmt -> conditional . 

  actions:
    action 'END' (noprec):   reduce stmt --> conditional
    action 'EQ' (noprec):   reduce stmt --> conditional
    action 'NE' (noprec):   reduce stmt --> conditional
    action 'LT' (noprec):   reduce stmt --> conditional
    action 'LE' (noprec):   reduce stmt --> conditional
    action 'GT' (noprec):   reduce stmt --> conditional
    action 'GE' (noprec):   reduce stmt --> conditional
    action 'AND' (noprec):   reduce stmt --> conditional
    action 'OR' (noprec):   reduce stmt --> conditional
    action 'NOT' (noprec):   reduce stmt --> conditional
    action 'PLUS' (noprec):   reduce stmt --> conditional
    action 'MINUS' (noprec):   reduce stmt --> conditional
    action 'MULT' (noprec):   reduce stmt --> conditional
    action 'DIV' (noprec):   reduce stmt --> conditional
    action 'QLBOOL' (noprec):   reduce stmt --> conditional
    action 'QLSTRING' (noprec):   reduce stmt --> conditional
    action 'QLINT' (noprec):   reduce stmt --> conditional
    action 'QLDATE' (noprec):   reduce stmt --> conditional
    action 'QLDECIMAL' (noprec):   reduce stmt --> conditional
    action 'QLMONEY' (noprec):   reduce stmt --> conditional
    action 'MONEY' (noprec):   reduce stmt --> conditional
    action 'DECIMAL' (noprec):   reduce stmt --> conditional
    action 'DATE' (noprec):   reduce stmt --> conditional
    action 'INT' (noprec):   reduce stmt --> conditional
    action 'STRING' (noprec):   reduce stmt --> conditional
    action 'BOOL' (noprec):   reduce stmt --> conditional
    action 'LABEL' (noprec):   reduce stmt --> conditional
    action 'IDENTIFIER' (noprec):   reduce stmt --> conditional
    action 'COLON' (noprec):   reduce stmt --> conditional
    action 'B_OPEN' (noprec):   reduce stmt --> conditional
    action 'B_CLOSE' (noprec):   reduce stmt --> conditional
    action 'CB_OPEN' (noprec):   reduce stmt --> conditional
    action 'CB_CLOSE' (noprec):   reduce stmt --> conditional
    action 'IF' (noprec):   reduce stmt --> conditional
    action 'FORM' (noprec):   reduce stmt --> conditional
    action 'error' (noprec):   reduce stmt --> conditional
    action '#' (noprec):   reduce stmt --> conditional
    action '$$' (noprec):   reduce stmt --> conditional

  immediate action:   reduce stmt --> conditional
 gotos:

state 13:
  items:
    assignment -> 'IDENTIFIER' . 'COLON' 'LABEL' expType 'B_OPEN' expression 'B_CLOSE'
    question -> 'IDENTIFIER' . 'COLON' 'LABEL' qlType
